--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnCount="4"
+        android:columnCount="3"
         >
 
         <Button
@@ -55,6 +55,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnReactNative2"
             android:text="React Activity" />
+
+        <Button android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/handlerActivityBtn"
+            android:text="Handler Activity" />
 
 
     </GridLayout>
