--- a/app/src/main/res/layout/activity_uiexample.xml
+++ b/app/src/main/res/layout/activity_uiexample.xml
@@ -64,14 +64,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn1" />
 
-            <ImageButton
-                android:id="@+id/imageBtn2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageBtn1"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+<!--            <ImageButton-->
+<!--                android:id="@+id/imageBtn2"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/imageBtn1"-->
+<!--                app:srcCompat="@drawable/ic_launcher_foreground" />-->
 
             <ImageView
                 android:id="@+id/imageView"
@@ -79,8 +79,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageBtn2"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@tools:sample/avatars"
+                tools:ignore="MissingConstraints" />
 
 
             <LinearLayout
