--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,13 @@
             android:layout_height="wrap_content"
             android:text="ConstraintLayout Anim" />
 
+        <Button
+            android:id="@+id/drawableBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Drawable List"
+            />
+
     </GridLayout>
 
     <com.lqd.androidpractice.view.RadiusProgressBar
